tests/ui/coherence/coherence-blanket-conflicts-with-specific-cross-crate.stderr
error[E0119]: conflicting implementations of trait `GoMut` for type `MyThingy`
  --> $DIR/coherence-blanket-conflicts-with-specific-cross-crate.rs:15:1
   |
LL | impl GoMut for MyThingy {
   | ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `go_trait`:
           - impl<G> GoMut for G
             where G: Go;

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0119`.
